fix: resolve kapt IllegalAccessError by updating kotlin version